--- a/templates/zerver/accounts_home.html
+++ b/templates/zerver/accounts_home.html
@@ -22,19 +22,10 @@ $(function () {
                           {{ csrf_input }}
 
                           <div class="input-box">
-                              <input type="text" id="email" class="email" name="email" value="" required>
+                              <input type="email" id="email" class="email" name="email" value="" required>
                               <label>Work email</label>
                               <div class="required"></div>
-                              <div class="valid">
-                                  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 320 370">
-                                      <g>
-                                          <title>Layer 1</title>
-                                          <g id="layer1">
-                                              <path fill="#54b8a7" fill-rule="evenodd" stroke-width="0.25pt" d="m20,200l100,90l180,-180l-35,-35l-145,145l-60,-60l-40,40z"/>
-                                          </g>
-                                      </g>
-                                  </svg>
-                              </div>
+                              <img class="valid" src="/static/images/checkbox-valid.svg" />
                           </div>
 
                           <button type="submit" class="draw" name="">{{ _('Sign up') }}</button>
