--- a/static/templates/settings/streams-list-admin.handlebars
+++ b/static/templates/settings/streams-list-admin.handlebars
@@ -1,16 +1,25 @@
 <div id="admin-streams-list" class="settings-section" data-name="streams-list-admin">
-<div class="settings-section-title"><i class="icon-vector-exchange settings-section-icon"></i>
-{{t "Delete streams" }}</div>
+    <div class="settings-section-title">
+        <div class="table-title">
+            <i class="icon-vector-exchange settings-section-icon"></i>
+            {{t "Delete streams" }}
+        </div>
+        <input type="text" class="search" placeholder="{{t 'Search streams' }}" />
+        <div class="clear-float"></div>
+    </div>
 
-<div class="side-padded-container">
-  <p class="admin-streams-note">{{#tr this}}Most stream administration is done on the <a href="/#streams">Streams page</a>.{{/tr}}</p>
-</div>
+    <div class="side-padded-container">
+      <p class="admin-streams-note">{{#tr this}}Most stream administration is done on the <a href="/#streams">Streams page</a>.{{/tr}}</p>
+    </div>
 
-<table class="table table-condensed table-striped">
-  <tbody id="admin_streams_table" class="admin_stream_table">
-    <th>{{t "Name" }}</th>
-    <th>{{t "Actions" }}</th>
-  </tbody>
-</table>
-<div id="admin_page_streams_loading_indicator"></div>
+    <div class="progressive-table-wrapper">
+        <table class="table table-condensed table-striped">
+            <thead>
+                <th>{{t "Name" }}</th>
+                <th>{{t "Actions" }}</th>
+            </thead>
+            <tbody id="admin_streams_table" class="admin_stream_table"></tbody>
+        </table>
+    </div>
+    <div id="admin_page_streams_loading_indicator"></div>
 </div>
