--- a/static/templates/settings/bot-list-admin.handlebars
+++ b/static/templates/settings/bot-list-admin.handlebars
@@ -1,15 +1,24 @@
 <div id="admin-user-list" class="settings-section" data-name="bot-list-admin">
-<div class="settings-section-title"><i class="icon-vector-github settings-section-icon"></i>
-{{t "Bots" }}</div>
-<table class="table table-condensed table-striped wrapped-table">
-  <tbody id="admin_bots_table" class="admin_bot_table">
-    <th class="wrapped-cell">{{t "Name" }}</th>
-    <th>{{t "Email" }}</th>
-    <th>{{t "Owner" }}</th>
-    {{#if is_admin}}
-        <th>{{t "Actions" }}</th>
-    {{/if}}
-  </tbody>
-</table>
-<div id="admin_page_bots_loading_indicator"></div>
+    <div class="settings-section-title">
+        <div class="table-title">
+            <i class="icon-vector-github settings-section-icon"></i>
+            {{t "Bots" }}
+        </div>
+        <input type="text" class="search" placeholder="{{t 'Search bots' }}" />
+        <div class="clear-float"></div>
+    </div>
+    <div class="progressive-table-wrapper">
+        <table class="table table-condensed table-striped wrapped-table">
+            <thead>
+                <th class="wrapped-cell">{{t "Name" }}</th>
+                <th>{{t "Email" }}</th>
+                <th>{{t "Owner" }}</th>
+                {{#if is_admin}}
+                    <th>{{t "Actions" }}</th>
+                {{/if}}
+            </thead>
+            <tbody id="admin_bots_table" class="admin_bot_table"></tbody>
+        </table>
+    </div>
+    <div id="admin_page_bots_loading_indicator"></div>
 </div>
