--- a/templates/zerver/landing_nav_blue.html
+++ b/templates/zerver/landing_nav_blue.html
@@ -1,8 +1,4 @@
-<nav>
-    <div class="clear-float"></div>
-    <div class="stripes"></div>
-    <div class="faded"></div>
-    <div class="faded-light"></div>
+<nav class="dark-blue">
     <div class="content">
         <a class="brand logo no-style" href="{{ server_uri }}">
             <svg class="brand-logo" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 40 40" version="1.1">
