--- a/static/styles/reactions.css
+++ b/static/styles/reactions.css
@@ -15,13 +15,12 @@
 }
 
 .private-message .message_reactions .message_reaction {
-    /* Use the PM color background, since white-on-yellow looks bad. */
-    background-color: #feffe0;
+    background-color: #f0f4f5;
 }
 
-.message_reactions .reacted {
-    /* Needs to be important to override the .private-message one */
-    background-color: #eef7fa !important;
+.private-message .message_reactions .message_reaction.reacted {
+    background-color: #e4f2f7;
+    border-color: #96c3d0;
 }
 
 .message_reaction .emoji {
