--- a/templates/zerver/emails/digest.html
+++ b/templates/zerver/emails/digest.html
@@ -11,9 +11,9 @@ Hello {{ name }},
 <p>You have some missed private messages. Here are some of them:</p>
 <div id='private-messages' style="width: 600px;font-size: 12px;font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;overflow-y: scroll;">
     {% for recipient_block in unread_pms %}
-        <div class='recipient_block' style="background-color: #feffe0;border: 1px solid black;margin-bottom: 4px;">
+        <div class='recipient_block' style="background-color: #f0f4f5;border: 1px solid black;margin-bottom: 4px;">
             <div class='recipient_header' style="color: #ffffff;background-color: #444444;border-bottom: 1px solid black;font-weight: bold;padding: 2px;">{{ recipient_block.header.html|safe }}</div>
-            <div class='message_content' style="background-color: #feffe0;margin-left: 1px;margin-right: 2px;">
+            <div class='message_content' style="background-color: #f0f4f5;margin-left: 1px;margin-right: 2px;">
             {% for sender_block in recipient_block.senders %}
                 {% if sender_block.sender %} <div class="message_sender" style="font-weight: bold;padding-top: 1px;">{{ sender_block.sender }}</div>{% endif %}
                 {% for message_block in sender_block.content %}
